[APP-2860] - Fix error message not displaying if a description exists (#349)
* [APP-2860] - Fix error message not displaying if a description exists

* Fix description when using append

* [APP-2860] - Adjustments to support default placeholder and validation checks for certain masks

* Fixes

* More unit tests

* Fix zindex overlapping with navbar

* Formatting

--- a/components/atoms/Input/Input.scss
+++ b/components/atoms/Input/Input.scss
@@ -91,7 +91,7 @@
       position: absolute;
       top: 2.7rem;
       left: 1.3rem;
-      z-index: 9999;
+      z-index: 1000;
       color: $dark-blue;
       font-size: 2rem;
     }
@@ -121,6 +121,7 @@
   .uic--description {
     color: $slate;
     font-style: italic;
+    white-space: initial;
   }
 
   .uic--validation-error,
